Added EF Core, DB Connection, models for tables books, authors, book_authors, made first READ proc from DB, added SqlService for DB, AzureBlobService, Enums for modelsand BookPageController on backend.
Added corresponding models on frontend with corresponding enums, added book-page service for communication with BE on FE.

--- a/BookEshop/angularapp/src/app/books-page/books-page.component.html
+++ b/BookEshop/angularapp/src/app/books-page/books-page.component.html
@@ -60,137 +60,158 @@
         <hr>
       </div>
       <div class="row justify-content-center">
-        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
-          <div class="row justify-content-between">
-            <img class="img-fluid" src="../../assets/books/iron-flame.jpg" alt="">
+        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2" *ngFor="let book of books">
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <img class="img-fluid" src={{book.coverImageURL}} alt="">
+          </div>
+            
           </div>
           <div class="row justify-content-between">
             <div class="col-auto">
-              <p class="desc">REBECCA YARROS</p>
+              <!--<p class="desc" *ngFor="let author of book.booksAuthors">
+                {{ author.name }} {{ author.middleName ? author.middleName + ' ' : '' }}{{ author.surname }}
+              </p>-->
             </div>
             <div class="col-auto">
-              <p class="desc">19,95€</p>
+              <p class="desc">{{ book.price }}</p>
             </div>
           </div>
           <div class="row">
-            <p class="title">Iron Flame</p>
+            <p class="title">{{ book.title }}</p>
           </div>
         </div>
-        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
-          <div class="row justify-content-between">
-            <img class="img-fluid h-md-250 h-lg-355" src="../../assets/books/holly.jpg" alt="">
+        <!--<div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
+        <div class="row justify-content-between">
+          <img class="img-fluid" src="../../assets/books/iron-flame.jpg" alt="">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <p class="desc">REBECCA YARROS</p>
           </div>
-          <div class="row justify-content-between">
-            <div class="col-auto">
-              <p class="desc">STEPHEN KING</p>
-            </div>
-            <div class="col-auto">
-              <p class="desc">32,50€</p>
-            </div>
-          </div>
-          <div class="row">
-            <p class="title">Holly</p>
+          <div class="col-auto">
+            <p class="desc">19,95€</p>
           </div>
         </div>
-        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
-          <div class="row justify-content-between">
-            <img class="img-fluid" src="../../assets/books/things-we-left-behind.jpg" alt="">
+        <div class="row">
+          <p class="title">Iron Flame</p>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
+        <div class="row justify-content-between">
+          <img class="img-fluid h-md-250 h-lg-355" src="../../assets/books/holly.jpg" alt="">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <p class="desc">STEPHEN KING</p>
           </div>
-          <div class="row justify-content-between">
-            <div class="col-auto">
-              <p class="desc">LUCY SCORE</p>
-            </div>
-            <div class="col-auto">
-              <p class="desc">13,95€</p>
-            </div>
-          </div>
-          <div class="row">
-            <p class="title">Things We Left Behind</p>
+          <div class="col-auto">
+            <p class="desc">32,50€</p>
           </div>
         </div>
-        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
-          <div class="row justify-content-between">
-            <img class="img-fluid" src="../../assets/books/counting-the-cost.jpg" alt="">
+        <div class="row">
+          <p class="title">Holly</p>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
+        <div class="row justify-content-between">
+          <img class="img-fluid" src="../../assets/books/things-we-left-behind.jpg" alt="">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <p class="desc">LUCY SCORE</p>
           </div>
-          <div class="row justify-content-between">
-            <div class="col-auto">
-              <p class="desc">JILL DUGGAR</p>
-            </div>
-            <div class="col-auto">
-              <p class="desc">17,95€</p>
-            </div>
-          </div>
-          <div class="row">
-            <p class="title">Counting The Cost</p>
+          <div class="col-auto">
+            <p class="desc">13,95€</p>
           </div>
         </div>
-        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
-          <div class="row justify-content-between">
-            <img class="img-fluid" src="../../assets/books/going-infinite.jpg" alt="">
+        <div class="row">
+          <p class="title">Things We Left Behind</p>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
+        <div class="row justify-content-between">
+          <img class="img-fluid" src="../../assets/books/counting-the-cost.jpg" alt="">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <p class="desc">JILL DUGGAR</p>
           </div>
-          <div class="row justify-content-between">
-            <div class="col-auto">
-              <p class="desc">MICHAEL LEWIS</p>
-            </div>
-            <div class="col-auto">
-              <p class="desc">17,78€</p>
-            </div>
-          </div>
-          <div class="row">
-            <p class="title">Going Infinite</p>
+          <div class="col-auto">
+            <p class="desc">17,95€</p>
           </div>
         </div>
-        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
-          <div class="row justify-content-between">
-            <img class="img-fluid" src="../../assets/books/the-democrat-party-hates-america.jpg" alt="">
+        <div class="row">
+          <p class="title">Counting The Cost</p>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
+        <div class="row justify-content-between">
+          <img class="img-fluid" src="../../assets/books/going-infinite.jpg" alt="">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <p class="desc">MICHAEL LEWIS</p>
           </div>
-          <div class="row justify-content-between">
-            <div class="col-auto">
-              <p class="desc">MARK R. LEVIN</p>
-            </div>
-            <div class="col-auto">
-              <p class="desc">16,65€</p>
-            </div>
-          </div>
-          <div class="row">
-            <p class="title">The Democrat Party Hates America</p>
+          <div class="col-auto">
+            <p class="desc">17,78€</p>
           </div>
         </div>
-        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
-          <div class="row justify-content-between">
-            <img class="img-fluid" src="../../assets/books/upon-waking.jpg" alt="">
+        <div class="row">
+          <p class="title">Going Infinite</p>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
+        <div class="row justify-content-between">
+          <img class="img-fluid" src="../../assets/books/the-democrat-party-hates-america.jpg" alt="">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <p class="desc">MARK R. LEVIN</p>
           </div>
-          <div class="row justify-content-between">
-            <div class="col-auto">
-              <p class="desc">JACKIE HILL PERRY</p>
-            </div>
-            <div class="col-auto">
-              <p class="desc">16,00€</p>
-            </div>
-          </div>
-          <div class="row">
-            <p class="title">Upon Waking</p>
+          <div class="col-auto">
+            <p class="desc">16,65€</p>
           </div>
         </div>
-        <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
-          <div class="row justify-content-between">
-            <img class="img-fluid" src="../../assets/books/build-the-life-you-want.jpg" alt="">
+        <div class="row">
+          <p class="title">The Democrat Party Hates America</p>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
+        <div class="row justify-content-between">
+          <img class="img-fluid" src="../../assets/books/upon-waking.jpg" alt="">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <p class="desc">JACKIE HILL PERRY</p>
           </div>
-          <div class="row justify-content-between">
-            <div class="col-aut">
-              <p class="desc">ARTHUR C. BROOKS</p>
-            </div>
-            <div class="col-auto">
-              <p class="desc">16,95€</p>
-            </div>
+          <div class="col-auto">
+            <p class="desc">16,00€</p>
           </div>
-          <div class="row">
-            <p class="title">Build The Life You Want</p>
+        </div>
+        <div class="row">
+          <p class="title">Upon Waking</p>
+        </div>
+      </div>
+      <div class="col-6 col-md-3 col-lg-3 mb-4 mx-0 col-4k-2">
+        <div class="row justify-content-between">
+          <img class="img-fluid" src="../../assets/books/build-the-life-you-want.jpg" alt="">
+        </div>
+        <div class="row justify-content-between">
+          <div class="col-aut">
+            <p class="desc">ARTHUR C. BROOKS</p>
           </div>
+          <div class="col-auto">
+            <p class="desc">16,95€</p>
+          </div>
+        </div>
+        <div class="row">
+          <p class="title">Build The Life You Want</p>
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
+      </div>
   <div class="hide-button">
     <button type="button" class="btn btn-light btn-circle" (click)="showSidebar()">
       <i class="bi bi-layout-text-sidebar-reverse"></i>
