Added page fopr adding book to Db, added buttons on Book page to delete or edit a book. Changed the static displaying of books on book page with getting books from DD -> added the whole funcionality for the READ from DB. Added functionalities for adding book to DB (CREATE), removing book from DB (DELETE).

--- a/BookEshop/angularapp/src/app/books-page/books-page.component.css
+++ b/BookEshop/angularapp/src/app/books-page/books-page.component.css
@@ -67,8 +67,19 @@ a, .bi-house, .desc {
   border: solid 1px;
 }
 
-@media(max-width:576px) {
-  .hide-on-xs {
+.btn-icon {
+  width: 30px;
+  height: 30px;
+  padding: 5px 5px;
+  border-radius: 35px;
+  font-size: 1.2em;
+  text-align: center;
+  line-height: 0.8;
+  border: solid 1px gray;
+}
+
+ @media(max-width:576px) {
+    .hide-on-xs {
     display: none;
   }
 }
