--- a/BookEshop/angularapp/src/app/navigation-bar/navigation-bar.component.html
+++ b/BookEshop/angularapp/src/app/navigation-bar/navigation-bar.component.html
@@ -45,6 +45,9 @@
         <li class="nav-item midsize">
           <a class="nav-link disabled" href="#">AudioKnihy</a>
         </li>
+        <li class="nav-item midsize">
+          <a class="nav-link" routerLink="/pridaj">Pridaj knihu</a>
+        </li>
         <li class="nav-item last midsize d-md-none">
           <a class="nav-link disabled" href="#"><i class="bi bi-person-circle"></i> Prihlásiť sa</a>
         </li>
