Added functionalioty to edit info about a specific book after clicking on the edit button on books-page component.

--- a/BookEshop/angularapp/src/app/books-page/books-page.component.html
+++ b/BookEshop/angularapp/src/app/books-page/books-page.component.html
@@ -90,7 +90,7 @@
               <button (click)="deleteBook(book.bookId)" class="btn-icon"><i class="bi bi-trash"></i></button>
             </div>
             <div class="col-auto px-0">
-              <button class="btn-icon"><i class="bi bi-pen"></i></button>
+              <button (click)="editBook(book.bookId)" class="btn-icon"><i class="bi bi-pen"></i></button>
             </div>
           </div>
         </div>
