--- a/BookEshop/angularapp/src/app/edit-book-page/edit-book-page.component.html
+++ b/BookEshop/angularapp/src/app/edit-book-page/edit-book-page.component.html
@@ -1,7 +1,7 @@
 <form class="px-3 py-3" (ngSubmit)="onSubmit()">
   <div class="row justify-content-center">
     <div class="col-auto py-2">
-      <h2>Pridanie do DB</h2>
+      <h2>Zmena údajov o knihe</h2>
     </div>
   </div>
   <div class="row justify-content-center">
@@ -87,10 +87,10 @@
       <label for="bookDescriptionInput">Popis knihy</label>
       <textarea class="form-control" id="bookDescriptionInput" aria-describedby="bookDescription" placeholder="Popis knihy" required [(ngModel)]="book.description" name="description"></textarea>
     </div>
-  </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="row justify-content-center">
+      <div class="col-auto py-3">
+        <button type="submit" class="btn btn-primary send-button">Ulož zmeny</button>
+      </div>
+    </div>
   </div>
 </form>
