--- a/BookEshop/angularapp/src/app/navigation-bar/navigation-bar.component.html
+++ b/BookEshop/angularapp/src/app/navigation-bar/navigation-bar.component.html
@@ -49,7 +49,7 @@
           <a class="nav-link" routerLink="/pridaj">Pridaj knihu</a>
         </li>
         <li class="nav-item last midsize d-md-none">
-          <a class="nav-link disabled" href="#"><i class="bi bi-person-circle"></i> Prihlásiť sa</a>
+          <button mat-button (click)="openLoginPopup()" class="nav-link" href="#"><i class="bi bi-person-circle"></i> Prihlásiť sa</button>
         </li>
         <li class="col-auto midsize d-md-none">
           <a class="nav-link disabled"><i class="bi bi-basket"></i> Nákupný košík</a>
@@ -57,7 +57,7 @@
       </ul>
       <ul class="navbar-nav ml-auto d-none d-md-block">
         <li class="nav-item last">
-          <a class="nav-link disabled" href="#"><i class="bi bi-person-circle"></i> Prihlásiť sa</a>
+          <button mat-button (click)="openLoginPopup()" class="nav-link" href="#"><i class="bi bi-person-circle"></i> Prihlásiť sa</button>
         </li>
       </ul>
     </div>
