Added ExceptionHandlingControllerBase (and implemented it in BooksController - still need to finish), on FE added snackbar for displaying custom messages and notification service for the snackbar.

--- a/BookEshop/angularapp/src/app/login/login.component.html
+++ b/BookEshop/angularapp/src/app/login/login.component.html
@@ -32,7 +32,12 @@
       <div class="row justify-content-center mx-0 my-0">
         <div class="col-auto">
           <button mat-raised-button (click)="submit()">Prihlásiť sa</button>
+        </div>
+      </div>
+      <div class="row justify-content-center mx-0 my-0">
+        <div class="col-auto">
           <span *ngIf="show"> <button mat-button>Prihlásenie úspešné</button></span>
+          <span *ngIf="show"> <button mat-button>Neplatné meno alebo heslo</button></span>
         </div>
       </div>
       <div class="row justify-content-center mx-0 my-0">
