Fixed logging in - user is still logged in after refreshing page. Added implmentation for AzureBlobService - saving book cover image from frontend to azure blob service now works and url from object in the azure blob storage is saved to DB. Image from Azure Blob Storage is also deleted when deleting book or editing book cover image. Fixed wrong text after logging in.

--- a/BookEshop/angularapp/src/app/add-page/add-page.component.css
+++ b/BookEshop/angularapp/src/app/add-page/add-page.component.css
@@ -1,6 +1,7 @@
-.send-button {
-    background-color:orange;
-    border: none;
+.send-button, .remove-btn {
+  background-color: orange;
+  border: none;
+  color: white;
 }
 
 form {
@@ -10,4 +11,8 @@ form {
 
 textarea#bookDescriptionInput {
   height: 10vw;
+}
+
+.form-control, .remove-btn {
+  height: 40px;
 }
