--- a/BookEshop/angularapp/src/app/login/login.component.css
+++ b/BookEshop/angularapp/src/app/login/login.component.css
@@ -30,3 +30,12 @@ button.mdc-button:hover {
   .btn-icon:hover {
     background-color: rgba(255,165,0, 0.3);
   }
+
+  span.login-invalid, span.login-valid {
+      font-size: 1.2rem;
+      font-weight: bold;
+  }
+
+span.login-invalid {
+  color: red;
+}
