--- a/BookEshop/angularapp/src/app/login/login.component.html
+++ b/BookEshop/angularapp/src/app/login/login.component.html
@@ -35,9 +35,9 @@
         </div>
       </div>
       <div class="row justify-content-center mx-0 my-0">
-        <div class="col-auto">
-          <span *ngIf="show"> <button mat-button>Prihlásenie úspešné</button></span>
-          <span *ngIf="show"> <button mat-button>Neplatné meno alebo heslo</button></span>
+        <div class="col-auto mt-2">
+          <span class="login-valid" *ngIf="show">Prihlásenie úspešné</span>
+          <span class="login-invalid" *ngIf="showInvalid">Neplatné meno alebo heslo</span>
         </div>
       </div>
       <div class="row justify-content-center mx-0 my-0">
@@ -46,12 +46,12 @@
         </div>
       </div>
       <div class="row justify-content-center mx-0 my-0">
-        <div class="col-auto">
+        <div class="col-auto mb-2">
           <h5>Ešte nemáš účet?</h5>
         </div>
       </div>
       <div class="row justify-content-center mx-0 my-0">
-        <div class="col-auto">
+        <div class="col-auto mb-3">
           <button mat-raised-button (click)="redirect()" routerLink="/registracia">Zaregistrovať sa</button>
         </div>
       </div>
