--- a/BookEshop/angularapp/src/app/navigation-bar/navigation-bar.component.html
+++ b/BookEshop/angularapp/src/app/navigation-bar/navigation-bar.component.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="col-auto align-self-end d-none d-md-block">
-        <button class="btn btn-dark shopping_basket"><i class="bi bi-basket"></i> Nákupný košík</button>
+        <button class="btn btn-dark shopping_basket" routerLink="/nakupny-kosik"><i class="bi bi-basket"></i> Nákupný košík</button>
       </div>
     </div>
   </div>
@@ -46,18 +46,24 @@
           <a class="nav-link disabled" href="#">AudioKnihy</a>
         </li>
         <li class="nav-item midsize">
-          <a class="nav-link" routerLink="/pridaj">Pridaj knihu</a>
+          <a class="nav-link" routerLink="/pridaj" *ngIf="role == 'Admin'">Pridaj knihu</a>
         </li>
         <li class="nav-item last midsize d-md-none">
-          <button class="nav-link" (click)="openLoginPopup()" ><i class="bi bi-person-circle"></i> Prihlásiť sa</button>
+          <button class="nav-link" *ngIf="role == ''" (click)="openLoginPopup()"><i class="bi bi-person-circle"></i> Prihlásiť sa</button>
+        </li>
+        <li class="nav-item last midsize d-md-none">
+          <button class="nav-link" *ngIf="role == 'Admin' || role == 'User'" (click)="logout()"><i class="bi bi-person-circle"></i> Odhlásiť sa</button>
         </li>
         <li class="col-auto midsize d-md-none">
-          <a class="nav-link disabled"><i class="bi bi-basket"></i> Nákupný košík</a>
+          <a class="nav-link" routerLink="/nakupny-kosik"><i class="bi bi-basket"></i> Nákupný košík</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto d-none d-md-block">
         <li class="nav-item last">
-          <button class="nav-link"  (click)="openLoginPopup()"><i class="bi bi-person-circle"></i> Prihlásiť sa</button>
+          <button class="nav-link" *ngIf="role == ''" (click)="openLoginPopup()"><i class="bi bi-person-circle"></i> Prihlásiť sa</button>
+        </li>
+        <li class="nav-item last">
+          <button class="nav-link" *ngIf="role == 'Admin' || role == 'User'" (click)="logout()"><i class="bi bi-person-circle"></i> Odhlásiť sa</button>
         </li>
       </ul>
     </div>
